--- a/plot-results.ipynb
+++ b/plot-results.ipynb
@@ -2,26 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#select model you are interesetd in\n",
+    "#download reps "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot id"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#plot neigh ov"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2.7.18 64-bit",
+   "display_name": "Python 3.8.12 ('esm')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "2.7.18"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "545e036c4b32438aced1f6b3c8d38ca151d9c36189e05839cb0aa568fda70ddd"
+    "hash": "d694f6c116cd702870def28c272741fa350bb192be29558cd88810b403b6ae0d"
    }
   }
  },
