--- a/plot-results.ipynb
+++ b/plot-results.ipynb
@@ -1,14 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy\n",
-    "import pandas as pd\n",
-    "import os"
+    "# The geometry of hidden representations in protein language models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries"
    ]
   },
   {
@@ -17,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy\n",
+    "import pandas as pd\n",
+    "import os\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.graph_objects import Layout\n",
@@ -28,7 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preparation"
+    "## ProteinNet dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download Data"
    ]
   },
   {
@@ -37,8 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#select model you are interesetd in\n",
-    "#download reps "
+    "# choose the model you are interested in between: 'esm1b', 'esm1v', 'ProtBert', 'ProtT5', 'esm2-'...\n",
+    "model = 'esm1b'\n",
+    "\n"
    ]
   },
   {
