--- a/plot-results.ipynb
+++ b/plot-results.ipynb
@@ -16,28 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0,'src/')\n",
+    "\n",
     "import numpy as np\n",
     "import os\n",
     "import plotly.graph_objects as go\n",
-    "from plotly.graph_objects import Layout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from plotly.graph_objects import Layout\n",
     "from intrinsic_dimension import block_analysis, save_ID_results, plot_curve_ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +48,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ProteinNet dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1. Intrinsic Dimension"
    ]
   },
@@ -67,12 +55,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Data and estimate ID"
+    "### Download ProteinNet data and estimate ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,35 +74,45 @@
     "reps_id = {i : [] for i in map[2]}\n",
     "\n",
     "# define path of input and output\n",
-    "input_path = '/Users/lucreziavaleriani/Desktop/mount_orfeo/data_repo/pdist/'+model\n",
-    "res_path = '/Users/lucreziavaleriani/Desktop/'\n"
+    "device = 'lucrezia'\n",
+    "if device == 'orfeo':\n",
+    "    input_path = '/Users/lucreziavaleriani/Desktop/mount_orfeo/data_repo/pdist/'+ model\n",
+    "else:\n",
+    "    input_path = '/Users/lucreziavaleriani/Desktop/'\n",
+    "    res_path = '/Users/lucreziavaleriani/Desktop/'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "start\n"
      ]
     }
    ],
    "source": [
     "# for each rep calculate the id value, save the results of the procedure if needed, \n",
     "# and store the mean value of ID inside the dictionary\n",
+    "from dadapy import data\n",
     "\n",
     "for rep in reps_id.keys():\n",
-    "    print(rep)\n",
     "    dist_mat = np.load(os.path.join(input_path,'pdist_pnet_rep'+str(rep)+'.npy'))\n",
     "    \n",
-    "    dim,std,n_point = block_analysis(dist_mat, blocks=list(range(1, 3)), fraction=0.9)\n",
-    "    esm1b = save_ID_results('id_0.csv',dim,std,n_point)\n",
+    "    # d = data.Data(dist_mat)\n",
+    "    # print('start')\n",
+    "    # id_twoNN_noisy, _, r_noisy = d.compute_id_2NN()\n",
     "\n",
-    "    reps_id[rep].append(np.mean(dim))\n",
+    "\n",
+    "    \n",
+    "    #dim,std,n_point = block_analysis(dist_mat, blocks=list(range(1, 21)), fraction=0.9)\n",
+    "    #esm1b = save_ID_results('id_0.csv',dim,std,n_point)\n",
+    "\n",
+    "    #reps_id[rep].append(np.mean(dim))\n",
     "    \n"
    ]
   },
