add plot no functions

--- a/plot-results.ipynb
+++ b/plot-results.ipynb
@@ -25,14 +25,17 @@
     "\n",
     "import numpy as np\n",
     "import os\n",
+    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.graph_objects import Layout\n",
-    "from intrinsic_dimension import block_analysis, save_ID_results, plot_curve_ID"
+    "\n",
+    "from intrinsic_dimension import block_analysis, save_ID_results, plot_curve_ID\n",
+    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no, update_figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,17 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np \n",
-    "from neighborhood_overlap import create_ds, add_data, overlap_mean, plot_no"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +178,7 @@
     "\n",
     "# take mapping values for the model\n",
     "map = mapping[model]\n",
+    "layer = len(map[2]) - 1\n",
     "\n",
     "# download NN matrices\n",
     "path = '/Users/lucreziavaleriani/Desktop/mount_orfeo/fold_rh/hn/newscope/1b/sp_all/rep'\n",
@@ -193,31 +187,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_ds(path, layer, ng=100):\n",
-    "    ds = create_ds(layer)\n",
-    "    for i in np.arange(0, layer+1):\n",
-    "        neig = np.load(path + str(i) + '-neigh.npy')\n",
-    "        idx = np.load(path + str(i) + '-idx.npy')\n",
-    "\n",
-    "        label = open(label_path + 'sp_lab.txt')\n",
-    "        label = np.array([l.strip('\\n') for l in label])\n",
-    "\n",
-    "        ds = add_data(ds, i, neig, idx, label, ng)\n",
-    "    return ds\n"
+    "ds = get_data(path, label_path, layer, ng = 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lucreziavaleriani/Desktop/mount_orfeo/the-geometry-of-hidden-representations/plot-results.ipynb Cella 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucreziavaleriani/Desktop/mount_orfeo/the-geometry-of-hidden-representations/plot-results.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m overlap_label \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(overlap_label(ds,\u001b[39m10\u001b[39;49m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "overlap_label = np.array(overlap_label(ds,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = get_ds(path,33,ng=100)\n",
-    "overlap1 = np.array(overlap_mean(ds,10))"
+    "overlap_last = np.array([overlap_layer(ds, i, 33, k=10) for i in range(33)])\n",
+    "overlap_first = np.array([overlap_layer(ds, i, 0, k=10) for i in range(34)])\n",
+    "overlap_last = np.array([overlap_layer(ds, i, 33, k=10) for i in range(34)])\n",
+    "overlap_next = np.array([overlap_layer(ds, i, i+1, k=10) for i in range(33)])"
    ]
   },
   {
@@ -229,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29 30 31 32 33 34]\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -262,87 +261,86 @@
          "type": "scatter",
          "x": [
           0,
-          0.029411764705882353,
-          0.058823529411764705,
-          0.08823529411764706,
-          0.11764705882352941,
-          0.14705882352941177,
-          0.17647058823529413,
-          0.20588235294117646,
-          0.23529411764705882,
-          0.2647058823529412,
-          0.29411764705882354,
-          0.3235294117647059,
-          0.35294117647058826,
-          0.38235294117647056,
-          0.4117647058823529,
-          0.4411764705882353,
-          0.47058823529411764,
-          0.5,
-          0.5294117647058824,
-          0.5588235294117647,
-          0.5882352941176471,
-          0.6176470588235294,
-          0.6470588235294118,
-          0.6764705882352942,
-          0.7058823529411765,
-          0.7352941176470589,
-          0.7647058823529411,
-          0.7941176470588235,
-          0.8235294117647058,
-          0.8529411764705882,
-          0.8823529411764706,
-          0.9117647058823529,
-          0.9411764705882353,
-          0.9705882352941176,
+          0.030303030303030304,
+          0.06060606060606061,
+          0.09090909090909091,
+          0.12121212121212122,
+          0.15151515151515152,
+          0.18181818181818182,
+          0.21212121212121213,
+          0.24242424242424243,
+          0.2727272727272727,
+          0.30303030303030304,
+          0.3333333333333333,
+          0.36363636363636365,
+          0.3939393939393939,
+          0.42424242424242425,
+          0.45454545454545453,
+          0.48484848484848486,
+          0.5151515151515151,
+          0.5454545454545454,
+          0.5757575757575758,
+          0.6060606060606061,
+          0.6363636363636364,
+          0.6666666666666666,
+          0.696969696969697,
+          0.7272727272727273,
+          0.7575757575757576,
+          0.7878787878787878,
+          0.8181818181818182,
+          0.8484848484848485,
+          0.8787878787878788,
+          0.9090909090909091,
+          0.9393939393939394,
+          0.9696969696969697,
           1
          ],
          "y": [
-          0.17635198135198019,
-          0.1867948717948701,
-          0.21909090909090437,
-          0.3208741258741187,
-          0.42803030303029577,
-          0.554743589743586,
-          0.6387529137529155,
-          0.6865034965034998,
-          0.7456876456876459,
-          0.7955244755244759,
-          0.8393473193473192,
-          0.8647435897435907,
-          0.8706993006993012,
-          0.8758741258741268,
-          0.8789277389277388,
-          0.8684265734265721,
-          0.8670046620046602,
-          0.8725407925407925,
-          0.8762470862470856,
-          0.8779137529137531,
-          0.8859557109557109,
-          0.8999417249417254,
-          0.9041491841491833,
-          0.9113636363636365,
-          0.9163286713286714,
-          0.9192657342657359,
-          0.9216899766899775,
-          0.9243240093240104,
-          0.9246153846153852,
-          0.9260372960372959,
-          0.9225757575757577,
-          0.9178671328671315,
-          0.9005361305361305,
-          0.8325174825174799
+          1,
+          0.27106060606060606,
+          0.30272727272727273,
+          0.19304195804195806,
+          0.12027972027972027,
+          0.08134032634032634,
+          0.07137529137529137,
+          0.06905594405594405,
+          0.06842657342657342,
+          0.0693123543123543,
+          0.07385780885780886,
+          0.0767948717948718,
+          0.07789044289044289,
+          0.08046620046620047,
+          0.08034965034965035,
+          0.07836829836829837,
+          0.07792540792540793,
+          0.07884615384615384,
+          0.07977855477855478,
+          0.07977855477855478,
+          0.07952214452214453,
+          0.07787878787878788,
+          0.07728438228438228,
+          0.07703962703962704,
+          0.07659673659673659,
+          0.07660839160839161,
+          0.07667832167832168,
+          0.07671328671328671,
+          0.0767948717948718,
+          0.0772027972027972,
+          0.07861305361305362,
+          0.0798951048951049,
+          0.08167832167832167,
+          0.08332167832167832
          ]
         }
        ],
        "layout": {
         "font": {
-         "size": 20
+         "size": 10
         },
-        "height": 700,
+        "height": 500,
         "legend": {
          "font": {
-          "size": 25
+          "size": 12
          },
          "orientation": "h",
          "x": 0.5,
@@ -1168,7 +1166,7 @@
           }
          }
         },
-        "width": 900,
+        "width": 600,
         "xaxis": {
          "linecolor": "black",
          "linewidth": 1,
@@ -1177,15 +1175,18 @@
           1.05
          ],
          "showline": true,
-         "showticklabels": true,
-         "tickmode": "array",
          "ticks": "outside",
          "tickvals": [
           0,
+          0.1,
           0.2,
+          0.30000000000000004,
           0.4,
-          0.6,
+          0.5,
+          0.6000000000000001,
+          0.7000000000000001,
           0.8,
+          0.9,
           1
          ],
          "title": {
@@ -1197,7 +1198,7 @@
          "linewidth": 1,
          "range": [
           0,
-          1
+          1.05
          ],
          "showline": true,
          "ticks": "outside",
@@ -1205,11 +1206,11 @@
           0,
           0.1,
           0.2,
-          0.3,
+          0.30000000000000004,
           0.4,
           0.5,
-          0.6,
-          0.7,
+          0.6000000000000001,
+          0.7000000000000001,
           0.8,
           0.9,
           1
@@ -1226,22 +1227,12 @@
     }
    ],
    "source": [
-    "layout = Layout(plot_bgcolor='rgba(0,0,0,0)')\n",
-    "fig = go.Figure(layout=layout)#.set_subplots(1, 1, horizontal_spacing=0.1,vertical_spacing=0.02)\n",
+    "fig = go.Figure(layout=Layout(plot_bgcolor='rgba(0,0,0,0)')) #.set_subplots(1, 1, horizontal_spacing=0.1,vertical_spacing=0.02)\n",
     "\n",
-    "plot_no(fig, len(map[2]), overlap1, map[1], map[0])\n",
-    "\n",
-    "fig.update_xaxes(showline=True, linewidth=1, linecolor='black', showticklabels=True, tickmode = 'array',tickvals = [0.0, 0.2, 0.4, 0.6, 0.8, 1.0],range=[-0.01,1.05],title='relative depth',ticks='outside')\n",
-    "fig.update_yaxes(showline=True, linewidth=1, linecolor='black', tickvals = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0] , range=[0,1], title = r'$\\chi^{gt}$',ticks='outside')\n",
-    "\n",
-    "fig.update_layout(width=900, height=700, font=dict(size=20),\n",
-    "                  legend=dict(orientation=\"h\",\n",
-    "                              yanchor=\"top\",\n",
-    "                              y=1.12,\n",
-    "                              xanchor=\"center\",\n",
-    "                              x=0.5, font = dict(size = 25)\n",
-    "                              )\n",
-    "                    ) "
+    "plot_no(fig, layer, overlap_first, map[1], map[0])\n",
+    "#plot_no(fig, layer-1, overlap_next, map[1], map[0])\n",
+    "update_figure(fig, title = r'$\\chi^{gt}$', save = False)\n",
+    "\n"
    ]
   },
   {
