--- a/the_geometry_of_hidden_representations.ipynb
+++ b/the_geometry_of_hidden_representations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,8 @@
     "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.graph_objects import Layout\n",
+    "import plotly.io as pio\n",
+    "pio.renderers\n",
     "\n",
     "from intrinsic_dimension import block_analysis, plot_ID, update_figure\n",
     "from neighborhood_overlap import mapping, get_data, overlap_label, overlap_layer, plot_no, update_figure\n",
@@ -90,17 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29 30 31 32 33]\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -1112,11 +1106,10 @@
     "\n",
     "for model in model_id:\n",
     "    ds_model = d_model_id[model]\n",
-    "    print(ds_model['nlayer'])\n",
     "\n",
     "    plot_ID(fig,ds_model['nlayer']/(len(ds_model['nlayer'])-1), list(ds_model['id'].values()), ds_model['map'][1], ds_model['map'][0])\n",
     "\n",
-    "update_figure(fig, w = 600, h= 500)"
+    "update_figure(fig, w = 600, h= 500)\n"
    ]
   },
   {
