--- a/the_geometry_of_hidden_representations.ipynb
+++ b/the_geometry_of_hidden_representations.ipynb
@@ -31,8 +31,9 @@
     "import plotly.io as pio\n",
     "pio.renderers.default = 'svg'\n",
     " \n",
+    "from utils import mapping, update_figure\n",
     "from intrinsic_dimension import block_analysis, plot_ID, update_figure\n",
-    "from neighborhood_overlap import mapping, get_data, overlap_label, overlap_layer, plot_no, update_figure\n",
+    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no\n",
     "\n"
    ]
   },
