--- a/the_geometry_of_hidden_representations.ipynb
+++ b/the_geometry_of_hidden_representations.ipynb
@@ -16,14 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0,'src/')\n",
     "\n",
-    "import numpy as np\n",
     "import os\n",
     "\n",
     "import plotly.graph_objects as go\n",
@@ -32,9 +31,8 @@
     "pio.renderers.default = 'svg'\n",
     " \n",
     "from utils import mapping, update_figure\n",
-    "from intrinsic_dimension import block_analysis, plot_ID, update_figure\n",
-    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no\n",
-    "\n"
+    "from intrinsic_dimension import block_analysis, plot_ID\n",
+    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no\n"
    ]
   },
   {
@@ -312,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('esm')",
+   "display_name": "Python 3.8.13 ('geomHR')",
    "language": "python",
    "name": "python3"
   },
@@ -326,12 +324,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "80b434e66dec172365e1d56c6499305bebc364f891c81c62e4abe63fcae008c1"
+    "hash": "af04507e3bfc83e03c0ad764daaee9d568b3c90ff8c66f9aad025dbe927a0e9f"
    }
   }
  },
