--- a/the_geometry_of_hidden_representations.ipynb
+++ b/the_geometry_of_hidden_representations.ipynb
@@ -33,7 +33,7 @@
     " \n",
     "from utils import mapping, update_figure\n",
     "from intrinsic_dimension import block_analysis, plot_ID\n",
-    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no\n"
+    "from neighborhood_overlap import get_data, overlap_label, overlap_layer, plot_no"
    ]
   },
   {
@@ -92,8 +92,7 @@
     "    for rep in id_model.keys():\n",
     "        dist_mat = os.path.join(model['path'], 'rep' + str(rep) + '/rep-' + str(rep))\n",
     "        dim, _, _ = block_analysis(dist_mat, blocks = list(range(1, 21)), fraction = 0.9)\n",
-    "        id_model[rep] = np.mean(dim)\n",
-    "        "
+    "        id_model[rep] = np.mean(dim)"
    ]
   },
   {
@@ -128,7 +127,7 @@
     "\n",
     "    plot_ID(fig, nlayer, list(id_model.values()), model_map[1], model_map[0])\n",
     "\n",
-    "update_figure(fig, w = 600, h= 500)\n"
+    "update_figure(fig, w = 600, h= 500)"
    ]
   },
   {
@@ -164,7 +163,7 @@
     "\n",
     "    model['map'] = mapping[m]\n",
     "    model['nlayer'] = len(model['map'][2]) - 1\n",
-    "    model['path'] = path_pnet + m + '/rep'\n"
+    "    model['path'] = path_pnet + m + '/rep'"
    ]
   },
   {
@@ -308,13 +307,6 @@
     "\n",
     "update_figure(fig, w = 600, h= 500)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
